--- a/src/lib/i18n/locales/zh-Hant-HK.json
+++ b/src/lib/i18n/locales/zh-Hant-HK.json
@@ -28,8 +28,8 @@
     },
     "home": {
       "hero": {
-        "promotion": "這裡有一些重要的推廣或消息。",
-        "promotion_action": "閱讀更多",
+        "tagline": "這裡有一些重要的推廣或消息。",
+        "tagline_link": "閱讀更多",
         "title": "SXYA 互助聚集地",
         "text": "如果你想找些話題來聊天，我們可以談談嗜好、旅遊、時事、個人目標、流行文化、美食或職業。有沒有什麼特別的你感興趣的呢？告訴我吧！",
         "primary_action": "開始使用",
