--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -139,6 +139,32 @@
 				"title": "Check out the latest events and have fun together",
 				"text": "We regularly hold various types of events, such as barbecues, sports, etc. To ensure that all members can enjoy comfortable and happy times."
 			}
+		},
+		"status": {
+			"upcoming": {
+				"label": "Upcoming",
+				"prefix": "Upcoming on"
+			},
+			"finished": {
+				"label": "Finished",
+				"prefix": "Finished on"
+			},
+			"ongoing": {
+				"label": "Ongoing",
+				"prefix": "Ongoing since"
+			}
+		},
+		"property": {
+			"related_personnel": "Related Personnel",
+			"status": "Status",
+			"meeting_time": "Meeting Time",
+			"meeting_point": "Meeting Point",
+			"event_point": "Event Point",
+			"proposer": "Proposer",
+			"outbound_transport": "Outbound Transport",
+			"outbound_time": "Outbound Time",
+			"inbound_transport": "Inbound Transport",
+			"inbound_time": "Inbound Time"
 		}
 	}
 }
