feat(l10n): add translations to member and event page

--- a/i18n/en-US/event.json
+++ b/i18n/en-US/event.json
@@ -1,4 +1,5 @@
 {
+	"information_language_restriction": "Due to productivity constraints, event information is currently only available in Chinese (Hong Kong).",
 	"category": {
 		"dining": {
 			"name": "Dining",
