--- a/i18n/en-US/common.json
+++ b/i18n/en-US/common.json
@@ -1,5 +1,6 @@
 {
 	"brand": {
 		"name": "SXYA Community"
-	}
+	},
+	"data_unavailable": "Sorry, data is unavailable at the moment. Please try again later."
 }
