fix(l10n): update Crowdin translations

--- a/i18n/zh-HK/common.json
+++ b/i18n/zh-HK/common.json
@@ -1,5 +1,6 @@
 {
 	"brand": {
 		"name": "SXYA 互助聚集地"
-	}
+	},
+	"data_unavailable": "Sorry, data is unavailable at the moment. Please try again later."
 }
