--- a/i18n/zh-HK/event.json
+++ b/i18n/zh-HK/event.json
@@ -1,4 +1,5 @@
 {
+	"information_language_restriction": "Due to productivity constraints, event information is currently only available in Chinese (Hong Kong).",
 	"category": {
 		"dining": {
 			"name": "Dining",
