fix(l10n): update Crowdin translations

--- a/i18n/zh-HK/home.json
+++ b/i18n/zh-HK/home.json
@@ -1,7 +1,7 @@
 {
 	"hero": {
 		"title": "SXYA 互助聚集地",
-		"text": "如果你想找些話題來聊天，我們可以談談嗜好、旅遊、時事、個人目標、流行文化、美食或職業。有沒有什麼特別的你感興趣的呢？告訴我吧！",
+		"text": "If you're looking for conversation ideas, we could talk about hobbies, travel, current events, personal goals, pop culture, food, or career. Is there anything in particular that interests you?",
 		"contact_us": "Contact Us",
 		"check_events": "Check Events",
 		"build_better_internet": "We're building a better Internet.",
