chore: add games page to navigation

--- a/i18n/en-US/navigation.json
+++ b/i18n/en-US/navigation.json
@@ -16,5 +16,6 @@
 	"talk_shit_definition_white_paper": "Talk Shit Definition White Paper",
 	"talk_shit_definition_white_paper_desc": "Provides a definition of the \"Talk Shit\" action",
 	"open": "Open main menu",
-	"close": "Close main menu"
+	"close": "Close main menu",
+	"games": "Games"
 }
