--- a/i18n/en-US/navigation.json
+++ b/i18n/en-US/navigation.json
@@ -17,5 +17,6 @@
 	"talk_shit_definition_white_paper_desc": "Provides a definition of the \"Talk Shit\" action",
 	"open": "Open main menu",
 	"close": "Close main menu",
-	"games": "Games"
+	"games": "Games",
+	"contacts": "Contacts"
 }
